--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,12 +11,11 @@ jobs:
             - run:
                   name: Install Dependencies
                   command: |
-                      cd components
                       yarn install --frozen-lockfile
             - save_cache:
                   name: Save Cache
                   paths:
-                      - components/node_modules
+                      - /node_modules
                   key: v2-dependencies-react-{{ checksum "yarn.lock" }}
             - run:
                   name: Prettier Check
