--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "@pxblue/react-themes": "^5.0.0",
         "@types/jest": "^24.0.0",
         "@types/node": "^12.0.0",
-        "@types/react": "^16.9.0",
+        "@types/react": "^16.9.43",
         "@types/react-dom": "^16.9.0",
         "clsx": "^1.1.1",
         "jss-rtl": "^0.3.0",
@@ -27,7 +27,7 @@
         "redux": "^4.0.5",
         "redux-thunk": "^2.3.0",
         "typeface-open-sans": "^0.0.75",
-        "typescript": "~3.7.2"
+        "typescript": "^4.0.2"
     },
     "scripts": {
         "start": "react-scripts start",
