--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "react-scripts": "3.4.3",
         "redux": "^4.0.5",
         "redux-thunk": "^2.3.0",
-        "typeface-open-sans": "^0.0.75",
+        "@fontsource/open-sans": "^4.1.0",
         "typescript": "^4.0.2"
     },
     "scripts": {
