--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "@pxblue/icons-mui": "^2.2.1",
         "@pxblue/react-components": "^4.1.1",
         "@pxblue/react-progress-icons": "^2.1.0",
-        "@pxblue/react-themes": "^5.0.3",
+        "@pxblue/react-themes": "^6.0.0-beta.1",
         "@types/jest": "^24.0.0",
         "@types/node": "^12.0.0",
         "@types/react": "^16.9.43",
