--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "@material-ui/styles": "^4.5.0",
         "@pxblue/colors": "^3.0.0",
         "@pxblue/icons-mui": "^2.2.1",
-        "@pxblue/react-components": "^4.1.1",
+        "@pxblue/react-components": "^5.0.0-beta.0",
         "@pxblue/react-progress-icons": "^2.1.0",
         "@pxblue/react-themes": "^6.0.0-beta.1",
         "@types/jest": "^24.0.0",
