--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
         "@pxblue/react-components": "^5.0.1-beta.0",
         "@pxblue/react-progress-icons": "^2.1.0",
         "@pxblue/react-themes": "^6.0.0-beta.1",
-        "@types/jest": "^24.0.0",
-        "@types/node": "^12.0.0",
-        "@types/react": "^16.9.43",
-        "@types/react-dom": "^16.9.0",
+        "@types/jest": "^26.0.22",
+        "@types/node": "^14.0.0",
+        "@types/react": "^17.0.0",
+        "@types/react-dom": "^17.0.0",
         "clsx": "^1.1.1",
         "jss-rtl": "^0.3.0",
         "prop-types": "^15.7.2",
-        "react": "^16.13.1",
-        "react-app-polyfill": "^1.0.6",
-        "react-dom": "^16.13.1",
+        "react": "^17.0.0",
+        "react-app-polyfill": "^2.0.0",
+        "react-dom": "^17.0.0",
         "react-redux": "^7.2.1",
         "react-router-dom": "^5.1.2",
-        "react-scripts": "3.4.3",
+        "react-scripts": "^4.0.0",
         "redux": "^4.0.5",
         "redux-thunk": "^2.3.0",
         "typescript": "^4.0.2"
@@ -38,9 +38,6 @@
         "prettier": "prettier \"**/**/*.{ts,tsx,js,jsx,json,css,scss,html,md}\" --write",
         "prettier:check": "prettier \"**/**/*.{ts,tsx,js,jsx,json,css,scss,html,md}\" --check",
         "precommit": "yarn && yarn prettier && yarn lint && yarn test"
-    },
-    "eslintConfig": {
-        "extends": "react-app"
     },
     "browserslist": {
         "production": [
@@ -61,17 +58,18 @@
     "devDependencies": {
         "@pxblue/eslint-config": "^2.0.4",
         "@pxblue/prettier-config": "^1.0.2",
-        "@testing-library/jest-dom": "^4.2.4",
-        "@testing-library/react": "^9.3.2",
-        "@testing-library/user-event": "^7.1.2",
+        "@testing-library/jest-dom": "^5.11.0",
+        "@testing-library/react": "^11.0.0",
+        "@testing-library/user-event": "^13.0.0",
         "@types/react-redux": "^7.1.9",
         "@types/react-router-dom": "^5.1.5",
-        "@typescript-eslint/eslint-plugin": "^3.0.0",
-        "@typescript-eslint/parser": "^3.0.0",
+        "@typescript-eslint/eslint-plugin": "^4.0.0",
+        "@typescript-eslint/parser": "^4.0.0",
+        "@wojtekmaj/enzyme-adapter-react-17": "^0.6.0",
         "enzyme": "^3.11.0",
         "enzyme-adapter-react-16": "^1.15.0",
-        "eslint": "^6.0.0",
-        "eslint-config-prettier": "^6.0.0",
+        "eslint": "^7.0.0",
+        "eslint-config-prettier": "^8.0.0",
         "eslint-plugin-react": "^7.0.0",
         "prettier": "^2.0.0",
         "prop-types": "^15.7.2"
