--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "@pxblue/icons-mui": "^2.2.1",
         "@pxblue/react-components": "^5.0.1-beta.2",
         "@pxblue/react-progress-icons": "^2.1.0",
-        "@pxblue/react-themes": "^6.0.0-beta.3",
+        "@pxblue/react-themes": "^6.0.0",
         "@types/jest": "^26.0.22",
         "@types/node": "^14.0.0",
         "@types/react": "^17.0.0",
