--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "@material-ui/styles": "^4.5.0",
         "@pxblue/colors": "^3.0.0",
         "@pxblue/icons-mui": "^2.2.1",
-        "@pxblue/react-components": "^5.0.1-beta.2",
+        "@pxblue/react-components": "^5.3.0",
         "@pxblue/react-progress-icons": "^2.1.0",
         "@pxblue/react-themes": "^6.0.0-beta.3",
         "@types/jest": "^26.0.22",
