--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
-        "test": "react-scripts test --passWithNoTests",
+        "test": "react-scripts test",
         "eject": "react-scripts eject",
         "lint": "eslint \"**/**/*.{ts,tsx}\"",
         "lint:fix": "eslint \"**/**/*.{ts,tsx}\" --fix",
@@ -68,6 +68,7 @@
         "@testing-library/user-event": "^13.0.0",
         "@types/react-redux": "^7.1.9",
         "@types/react-router-dom": "^5.1.5",
+        "@types/react-test-renderer": "^17.0.1",
         "@typescript-eslint/eslint-plugin": "^4.0.0",
         "@typescript-eslint/parser": "^4.0.0",
         "@wojtekmaj/enzyme-adapter-react-17": "^0.6.0",
