update ci workflow name

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,7 +54,7 @@ jobs:
 
 workflows:
     version: 2
-    react_library:
+    react_showcase:
         jobs:
             - build_demo
             - coverage_report:
