--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,7 @@ jobs:
                   name: Unit Test
                   command: |
                       yarn test --coverage --watchAll=false
+                      no_output_timeout: 1200
             - run:
                   name: Build Demo
                   command: |
