--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,6 +44,11 @@ jobs:
                 root: .
                 paths:
                     - coverage
+            - run:
+                  name: Memory Usage
+                  command: |
+                      cat /sys/fs/cgroup/memory/memory.max_usage_in_bytes
+                  when: always
 
     coverage_report:
         working_directory: ~/react-showcase-demo
