--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ jobs:
     build_demo:
         docker:
             - image: circleci/node:12.9.1-browsers
+    parallelism: 4
         steps:
             - checkout
             - restore_cache:
