--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,10 @@ jobs:
                   command: |
                       yarn prettier:check
             - run:
+                  name: Set Max Memory
+                  command: |
+                      NODE_OPTIONS=--max_old_space_size=5120
+            - run:
                   name: Lint
                   command: |
                       yarn lint
