--- a/package.json
+++ b/package.json
@@ -3,21 +3,31 @@
     "version": "2.0.0",
     "private": true,
     "dependencies": {
-        "@date-io/date-fns": "^1.3.13",
-        "@material-ui/core": "4.11.3",
-        "@material-ui/icons": "^4.0.0",
-        "@material-ui/lab": "^4.0.0-alpha.60",
-        "@material-ui/pickers": "^3.3.10",
-        "@material-ui/styles": "^4.5.0",
         "@brightlayer-ui/colors": "^3.0.1",
         "@brightlayer-ui/icons-mui": "^2.7.0",
         "@brightlayer-ui/react-components": "^5.3.2",
         "@brightlayer-ui/react-progress-icons": "^2.1.1",
         "@brightlayer-ui/react-themes": "^6.1.0",
+        "@date-io/date-fns": "^1.3.13",
+        "@emotion/react": "^11.7.1",
+        "@emotion/styled": "^11.6.0",
+        "@mui/base": "^5.0.0-alpha.68",
+        "@mui/codemod": "^5.4.1",
+        "@mui/docs": "^5.4.1",
+        "@mui/envinfo": "^2.0.5",
+        "@mui/icons-material": "^5.4.1",
+        "@mui/lab": "^5.0.0-alpha.68",
+        "@mui/material": "^5.4.1",
+        "@mui/private-theming": "^5.4.1",
+        "@mui/styled-engine": "^5.4.1",
+        "@mui/styled-engine-sc": "^5.4.1",
+        "@mui/styles": "^5.4.1",
+        "@mui/system": "^5.4.1",
+        "@mui/types": "^7.1.1",
         "@types/jest": "^26.0.22",
         "@types/node": "^14.0.0",
-        "@types/react": "^17.0.0",
-        "@types/react-dom": "^17.0.0",
+        "@types/react": "^17.0.39",
+        "@types/react-dom": "^17.0.11",
         "clsx": "^1.1.1",
         "date-fns": "^2.22.1",
         "jss-rtl": "^0.3.0",
@@ -27,7 +37,7 @@
         "react-dom": "^17.0.0",
         "react-redux": "^7.2.1",
         "react-router-dom": "^5.1.2",
-        "react-scripts": "^4.0.0",
+        "react-scripts": "^5.0.0",
         "redux": "^4.0.5",
         "redux-thunk": "^2.3.0",
         "typescript": "^4.0.2"
