--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "private": true,
     "dependencies": {
         "@brightlayer-ui/colors": "^3.0.1",
-        "@brightlayer-ui/icons-mui": "^2.7.0",
-        "@brightlayer-ui/react-components": "^5.3.2",
+        "@brightlayer-ui/icons-mui": "^3.0.0-beta.0",
+        "@brightlayer-ui/react-components": "^6.0.0-alpha.0",
         "@brightlayer-ui/react-progress-icons": "^2.1.1",
         "@brightlayer-ui/react-themes": "^6.1.0",
         "@date-io/date-fns": "^1.3.13",
