--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
         "react-scripts": "^5.0.0",
         "redux": "^4.0.5",
         "redux-thunk": "^2.3.0",
+        "stylis": "^4.0.13",
+        "stylis-plugin-rtl": "^2.1.1",
         "typescript": "^4.0.2"
     },
     "scripts": {
