--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
         "react-dom": "^17.0.0",
         "react-redux": "^7.2.1",
         "react-router-dom": "^5.1.2",
-        "react-scripts": "^5.0.0",
+        "react-scripts": "^5.0.1",
         "redux": "^4.0.5",
         "redux-thunk": "^2.3.0",
         "stylis": "^4.0.13",
@@ -89,7 +89,7 @@
         "enzyme": "^3.11.0",
         "eslint": "^8.9.0",
         "eslint-config-prettier": "^8.4.0",
-        "eslint-plugin-react": "^7.29.2",
+        "eslint-plugin-react": "~7.29.2",
         "firebase-tools": "^11.0.1",
         "prettier": "^2.0.0",
         "prop-types": "^15.7.2",
