--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "@mui/styles": "^5.4.1",
         "@mui/system": "^5.4.1",
         "@mui/types": "^7.1.1",
+        "@mui/x-date-pickers": "^5.0.8",
         "@types/jest": "^27.4.1",
         "@types/node": "^17.0.23",
         "clsx": "^1.1.1",
