--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     },
     "dependencies": {
         "@brightlayer-ui/colors": "^3.0.1",
-        "@brightlayer-ui/icons-mui": "^3.0.0",
+        "@brightlayer-ui/icons-mui": "^4.0.0-alpha.0",
         "@brightlayer-ui/react-components": "^6.0.0",
         "@brightlayer-ui/react-progress-icons": "^2.1.1",
-        "@brightlayer-ui/react-themes": "^7.0.0",
+        "@brightlayer-ui/react-themes": "^7.1.0-alpha.0",
         "@date-io/date-fns": "^2.13.1",
         "@emotion/css": "^11.9.0",
         "@emotion/react": "^11.7.1",
