--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 orbs:
-    codecov: codecov/codecov@1.1.3
+    codecov: codecov/codecov@3.2.2
 jobs:
     build_demo:
         docker:
@@ -59,7 +59,7 @@ jobs:
                   at: .
             - codecov/upload:
                   file: './coverage/clover.xml'
-                  token: e071b5d8-7127-4351-8acd-54f56d36a39c
+                  token: CODECOV_TOKEN
 
 workflows:
     version: 2
