--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -7,7 +7,7 @@ jobs:
   build_and_preview:
   if: |
     '${{ github.event.pull_request.head.repo.full_name == github.repository }}'
-    || ${{ github.actor != 'dependabot[bot]' }}
+    && ${{ github.actor != 'dependabot[bot]' }}
 
     runs-on: ubuntu-latest
 
