--- a/.github/workflows/pr-labeler.yml
+++ b/.github/workflows/pr-labeler.yml
@@ -1,4 +1,4 @@
-name: PR Labeler
+name: Pull Request Labeler
 on:
   pull_request:
     types: [opened]
@@ -17,4 +17,3 @@ jobs:
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           configuration-path: .github/pr-labeler.yml
-          
