--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -5,12 +5,8 @@ name: Deploy to Firebase Hosting on PR
 'on': pull_request
 jobs:
   build_and_preview:
-  if: |
-    '${{ github.event.pull_request.head.repo.full_name == github.repository }}'
-    && ${{ github.actor != 'dependabot[bot]' }}
-
+    if: '${{ github.event.pull_request.head.repo.full_name == github.repository }}'
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
       - run: yarn && yarn build
