--- a/package.json
+++ b/package.json
@@ -59,6 +59,22 @@
         "typescript": "^5.1.6",
         "vite-tsconfig-paths": "^4.2.1"
     },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all",
+            "IE 11",
+            "not IE 9-10"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version",
+            "ie 11",
+            "not ie 9-10"
+        ]
+    },
     "devDependencies": {
         "@brightlayer-ui/eslint-config": "^3.0.1",
         "@brightlayer-ui/prettier-config": "^1.0.3",
